Fix spacing and margin and padding

--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,51 @@
 html {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
-
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .banner {
+  position: relative;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.content {
+  position: absolute;
   max-width: 50em;
-  max-height: 500px
+  width: 100%;
+  padding: 0 1.5rem;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.img-flex {
+  display: block;
   width: 100%;
 }
 
-.img {
-  max-width:
+h2 {
+  color: #fff;
+  background-color: rgba(0, 0, 0, .5);
+  font-size: 4rem;
+  font-weight: bold;
+  display: inline;
+  line-height: 1.4;
+}
 
+p {
+  font-size: 2rem;
+  font-style: italic;
+  margin-top: .875rem;
+  margin-bottom: 1.15rem;
 }
